--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
@@ -25,7 +26,6 @@
     "chai": "^4.1.2",
     "sass": "^1.22.12",
     "sass-loader": "^7.1.0",
-    "typescript": "^3.6.3",
-    "vue-template-compiler": "^2.6.10"
+    "typescript": "^3.6.3"
   }
 }
