--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@shopify/draggable": "^1.0.0-beta.8",
+    "circular-dependency-plugin": "^5.2.0",
     "core-js": "^2.6.5",
     "keen-ui": "^1.2.0",
     "vue": "^2.6.10",
