--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@shopify/draggable": "^1.0.0-beta.8",
     "@types/uuid": "^3.4.5",
     "circular-dependency-plugin": "^5.2.0",
     "core-js": "^2.6.5",
+    "interactjs": "^1.6.2",
     "keen-ui": "^1.2.0",
     "node-uid": "^0.1.3",
     "vue": "^2.6.10",
