--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "circular-dependency-plugin": "^5.2.0",
     "core-js": "^2.6.5",
     "gh-pages": "^2.1.1",
-    "interactjs": "^1.6.2",
     "keen-ui": "^1.2.0",
     "node-uid": "^0.1.3",
     "vue": "^2.6.10",
+    "vue-draggable": "^2.0.2",
     "vue-router": "^3.0.3",
     "vue-template-compiler": "^2.6.10",
     "vuex": "^3.0.1"
